Added Booking and Hotel service model