@@ -1,17 +1,17 @@
 package com.project.hotelBooking.service;
 
-import com.project.hotelBooking.repository.model.Hotel;
+import com.project.hotelBooking.controller.exceptions.ElementNotFoundException;
 import com.project.hotelBooking.repository.model.Room;
-import com.project.hotelBooking.controller.model.RoomDto;
 import com.project.hotelBooking.mapper.RoomMapper;
 import com.project.hotelBooking.repository.*;
+import com.project.hotelBooking.service.mapper.HotelMapperServ;
+import com.project.hotelBooking.service.model.HotelServ;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,26 +22,40 @@ public class HotelService {
     private final RoomRepository roomRepository;
     private final RoomMapper roomMapper;
     private static final int PAGE_SIZE=5;
+    private final HotelMapperServ hotelMapperServ;
 
-    public Optional<Hotel> getHotelByNameAndHotelChain(Hotel hotel) { return hotelRepository.findHotelByNameAndHotelChain(
-            hotel.getName(), hotel.getHotelChain());}
-    public Hotel saveHotel(Hotel hotel) {
-        return hotelRepository.save(hotel);
+    public HotelServ getHotelByNameAndHotelChain(HotelServ hotel) {
+        return hotelMapperServ.mapToHotel(hotelRepository.findHotelByNameAndHotelChain(
+            hotel.getName(), hotel.getHotelChain()).orElseThrow(
+                        ()->new ElementNotFoundException("No such hotel"))
+        );
     }
-    public Optional<Hotel> getHotelById(Long id) {
-        return hotelRepository.findById(id);
+    public HotelServ saveHotel(HotelServ hotel) {
+        return hotelMapperServ.mapToHotel(
+                hotelRepository.save(hotelMapperServ.mapToRepositoryHotel(hotel))
+        );
+    }
+    public HotelServ getHotelById(Long id) {
+
+        return hotelMapperServ.mapToHotel(
+                hotelRepository.findById(id)
+                        .orElseThrow(() -> new ElementNotFoundException("No such hotel"))
+        );
     }
     public void deleteHotelById(Long id) {
         hotelRepository.deleteById(id);
     }
-    public List<Hotel> getHotels(Integer page, Sort.Direction sort) {
-        return hotelRepository.findAllHotels(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")));
+    public List<HotelServ> getHotels(Integer page, Sort.Direction sort) {
+        return hotelMapperServ.mapToHotels(
+                hotelRepository.findAllHotels(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")))
+        );
     }
-    public List<Hotel> getHotelsWithRooms(Integer page, Sort.Direction sort) {
-        List<Hotel> hotels =  hotelRepository.findAllHotels(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")));
-        List<Long> ids = hotels.stream().map(Hotel::getId).collect(Collectors.toList());
-        List<RoomDto> roomDtos = roomRepository.findAllByHotelIdIn(ids).stream().map(roomMapper::mapToRoomDto).toList();
-        List<Room> rooms =roomDtos.stream().map(roomMapper::mapToRoom).collect(Collectors.toList());
+    public List<HotelServ> getHotelsWithRooms(Integer page, Sort.Direction sort) {
+        List<HotelServ> hotels =  hotelMapperServ.mapToHotels(
+                hotelRepository.findAllHotels(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")))
+        );
+        List<Long> ids = hotels.stream().map(HotelServ::getId).collect(Collectors.toList());
+        List<Room> rooms = roomRepository.findAllByHotelIdIn(ids).stream().toList();
         hotels.forEach(hotel -> hotel.withRooms(extractRooms(rooms, hotel.getId())));
         return hotels;
     }
@@ -49,8 +63,10 @@ public class HotelService {
         return rooms.stream()
                 .filter(room -> room.getHotelId()==id).collect(Collectors.toList());
     }
-    public Hotel editHotel(Hotel hotel) {
-        return hotelRepository.save(hotel);
+    public HotelServ editHotel(HotelServ hotel) {
+        return hotelMapperServ.mapToHotel(
+                hotelRepository.save(hotelMapperServ.mapToRepositoryHotel(hotel))
+        );
     }
     public void deleteAllHotels() {
         hotelRepository.deleteAll();
