@@ -1,16 +1,17 @@
 package com.project.hotelBooking.service;
 
 import com.project.hotelBooking.repository.model.Hotel;
-import com.project.hotelBooking.controller.model.HotelDto;
 import com.project.hotelBooking.repository.model.Localization;
-import com.project.hotelBooking.mapper.HotelMapper;
 import com.project.hotelBooking.repository.*;
+import com.project.hotelBooking.service.mapper.HotelMapperServ;
+import com.project.hotelBooking.service.model.HotelServ;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -20,7 +21,7 @@ public class LocalizationService {
 
     private final LocalizationRepository localizationRepository;
     private final HotelRepository hotelRepository;
-    private final HotelMapper hotelMapper;
+    private final HotelMapperServ hotelMapperServ;
     private static final int PAGE_SIZE=5;
 
     public Optional<Localization> getLocalizationByCityAndCountry(Localization localization) { return localizationRepository.findLocalizationByCityAndCountry(
@@ -40,14 +41,17 @@ public class LocalizationService {
     public List<Localization> getLocalizationsWithHotels(Integer page, Sort.Direction sort) {
         List<Localization> localizations =  localizationRepository.findAllLocalizations(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")));
         List<Long> ids = localizations.stream().map(Localization::getId).collect(Collectors.toList());
-        List<HotelDto> hotelDtos = hotelRepository.findAllByLocalizationIdIn(ids).stream().map(hotel -> hotelMapper.mapToHotelDto(hotel)).toList();
-        List<Hotel> hotels =hotelDtos.stream().map(hotelDto -> hotelMapper.mapToHotel(hotelDto)).collect(Collectors.toList());
+        List<HotelServ> hotels = hotelMapperServ.mapToHotels(hotelRepository.findAllByLocalizationIdIn(ids).stream().toList());
         localizations.forEach(localization -> localization.setHotels(extractHotels(hotels, localization.getId())));
         return localizations;
     }
-    private List<Hotel> extractHotels(List<Hotel> hotels, Long id) {
+
+    //TODO - remove mapper after adding LocalizationServ
+    private List<Hotel> extractHotels(List<HotelServ> hotels, Long id) {
         return hotels.stream()
-                .filter(hotel -> hotel.getLocalizationId()==id).collect(Collectors.toList());
+                .filter(hotel -> Objects.equals(hotel.getLocalizationId(), id))
+                .map(hotelMapperServ::mapToRepositoryHotel)
+                .collect(Collectors.toList());
     }
     public Localization editLocalization(Localization localization) {
         return localizationRepository.save(localization);
